[gd_scene load_steps=5 format=2]

[ext_resource path="res://nodes/controls/DialogChoiceLine.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/DialogNode.gd" type="Script" id=2]
[ext_resource path="res://nodes/assets/DialogNodeSelected.stylebox" type="StyleBox" id=3]
[ext_resource path="res://nodes/assets/DialogNode.stylebox" type="StyleBox" id=4]

[node name="DialogNode" type="GraphNode"]
margin_right = 523.0
margin_bottom = 211.0
custom_styles/frame = ExtResource( 4 )
custom_styles/selectedframe = ExtResource( 3 )
custom_constants/port_offset = 10
custom_constants/separation = 5
title = "DialogNode"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
out_color = Color( 0, 0.415686, 1, 1 )

[node name="NameMoodHBox" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 42.0
margin_right = 503.0
margin_bottom = 66.0

[node name="CharacterLabel" type="Label" parent="NameMoodHBox"]
margin_top = 1.0
margin_right = 72.0
margin_bottom = 23.0
rect_min_size = Vector2( 0, 22 )
text = "Character:  "
valign = 2

[node name="CharacterLineEdit" type="LineEdit" parent="NameMoodHBox"]
margin_left = 76.0
margin_right = 176.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 22 )
placeholder_text = "Player"

[node name="Control" type="Control" parent="NameMoodHBox"]
margin_left = 180.0
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoodLabel" type="Label" parent="NameMoodHBox"]
margin_left = 204.0
margin_top = 1.0
margin_right = 252.0
margin_bottom = 23.0
rect_min_size = Vector2( 0, 22 )
text = "Mood:  "
valign = 2

[node name="MoodLineEdit" type="LineEdit" parent="NameMoodHBox"]
margin_left = 256.0
margin_right = 356.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 22 )
placeholder_text = "neutral"

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 20.0
margin_top = 71.0
margin_right = 503.0
margin_bottom = 75.0

[node name="DialogTextEdit" type="TextEdit" parent="."]
margin_left = 20.0
margin_top = 80.0
margin_right = 503.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 60 )

[node name="ChoicesHBox" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 145.0
margin_right = 503.0
margin_bottom = 169.0

[node name="Label" type="Label" parent="ChoicesHBox"]
margin_top = 5.0
margin_right = 54.0
margin_bottom = 19.0
text = "Choices:"

[node name="ChoicesSpinBox" type="SpinBox" parent="ChoicesHBox"]
margin_left = 58.0
margin_right = 132.0
margin_bottom = 24.0
min_value = 1.0
max_value = 10.0
value = 1.0
align = 2

[node name="DialogChoiceTextEdit" parent="." instance=ExtResource( 1 )]
margin_left = 20.0
margin_top = 174.0
margin_right = 503.0
margin_bottom = 198.0
[connection signal="value_changed" from="ChoicesHBox/ChoicesSpinBox" to="." method="_on_ChoicesSpinBox_value_changed"]
